Changed overflow attribute on #main-content and #mobile-menu to prevent weird scroll behavior and layout issues on mbile

--- a/css/layout.css
+++ b/css/layout.css
@@ -56,12 +56,14 @@ body {
 	display:flex;
 	justify-content: flex-start;
 	height:100%;
+	overflow: hidden;
 }
 
 #main-wrapper {
 	width:100%;
 	height:100%;
 	padding:10px;
+	overflow: auto;
 }
 
 #viewDiv {
